--- a/services/cabinet/public/html/templates/order.html
+++ b/services/cabinet/public/html/templates/order.html
@@ -36,5 +36,22 @@
       </div>
     </div>
     <canvas id='qr-demo'></canvas>
+    <div id='print-body'>
+      <button class='print'>Print</button>
+      <div class='page'>
+        <h1>PAGE</h1>
+      </div>
+      <div class='page'>
+        <h1>PAGE</h1>
+      </div>
+      <div class='page'>
+        <h1>PAGE</h1>
+      </div>
+      <div class='page'>
+        <h1>PAGE</h1>
+      </div>
+      <button class='print'>Print</button>
+    </div>
+
   </body>
 </html>
