--- a/services/cabinet/public/html/templates/documents/part.html
+++ b/services/cabinet/public/html/templates/documents/part.html
@@ -1,20 +1,30 @@
-<h2>{{info.parts().length}}) {{disp.demensions(info.demensions())}}</h2>
-{{disp.partIds(info.parts())}}
-<div class='font-medium part-cnt' {{info.cutInfo().length === 0 ? 'hidden' : ''}}>
-  <span>
-    <table>
-      <caption>Table Saw</caption>
-      <th>Width</th>
-      <th>Side&nbsp;Up</th>
-      <th>Edge</th>
-      <th>Fence&nbsp;@</th>
-      <th>Length</th>
-      <th>OOB</th>
-      <tr:t class='cut-info-cnt tab font-medium' repeat='cutInfo in info.cutInfo()'>
-        {{cutInfo.toString()}}
-      </tr:t>
-    </table>
-  </span>
-  <span class='tab' id='{{viewContainer(info.views.left)}}'></span>
-  <span class='tab' id='{{viewContainer(info.views.right)}}'></span>
+<div class='avoid-page-break'>
+  <div class='part-header-cnt'>
+    <h2 class='part-header'>
+      {{info.parts().length}}) {{disp.demensions(info.demensions())}}
+      &nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;
+      {{disp.partIds(info.parts())}}
+    </h2>
+  </div>
+  <div class="part-ids-cnt local-only no-print">{{disp.partCodes(info.parts())}}</div>
+  <div class='font-medium part-cnt' {{info.cutInfo().length === 0 ? 'hidden' : ''}}>
+    <span>
+      <table>
+        <caption><b>Table Saw</b></caption>
+        <tr>
+          <th>Width</th>
+          <th>Side&nbsp;Up</th>
+          <th>Edge</th>
+          <th>Fence&nbsp;@</th>
+          <th>Length</th>
+          <th>OOB</th>
+        </tr>
+        <tr:t class='cut-info-cnt tab font-medium' repeat='cutInfo in info.cutInfo()'>
+          {{cutInfo.toString()}}
+        </tr:t>
+      </table>
+    </span>
+    <span class='tab' id='{{viewContainer(info.views.left)}}'></span>
+    <span class='tab' id='{{viewContainer(info.views.right)}}'></span>
+  </div>
 </div>
