Wrecking house yet again (reconfiguring joints and part identifiers)

--- a/services/cabinet/public/html/templates/opening.html
+++ b/services/cabinet/public/html/templates/opening.html
@@ -1,5 +1,5 @@
 <div class='opening-cnt' opening-id='{{opening.id()}}'>
-  Section PartCode: <b class='copy-inner-text'>{{opening.partCode(true)}}</b>
+  <b class='copy-inner-text'>{{opening.userFriendlyId(true)}}</b>
   <div class='divider-controls'>
     {{OpenSectionDisplay.dividerHtml(opening)}}
   </div>
