--- a/services/cabinet/public/html/templates/order.html
+++ b/services/cabinet/public/html/templates/order.html
@@ -35,23 +35,6 @@
         </div>
       </div>
     </div>
-    <canvas id='qr-demo'></canvas>
-    <div id='print-body'>
-      <button class='print'>Print</button>
-      <div class='page'>
-        <h1>PAGE</h1>
-      </div>
-      <div class='page'>
-        <h1>PAGE</h1>
-      </div>
-      <div class='page'>
-        <h1>PAGE</h1>
-      </div>
-      <div class='page'>
-        <h1>PAGE</h1>
-      </div>
-      <button class='print'>Print</button>
-    </div>
-
+    <canvas id='qr-demo' hidden></canvas>
   </body>
 </html>
