--- a/services/cabinet/public/html/templates/documents/part.html
+++ b/services/cabinet/public/html/templates/documents/part.html
@@ -8,22 +8,7 @@
   </div>
   <div class="part-ids-cnt local-only no-print">{{disp.partCodes(info.parts())}}</div>
   <div class='font-medium part-cnt' {{info.cutInfo().length === 0 ? 'hidden' : ''}}>
-    <span>
-      <table>
-        <caption><b>Table Saw</b></caption>
-        <tr>
-          <th>Width</th>
-          <th>Side&nbsp;Up</th>
-          <th>Edge</th>
-          <th>Fence&nbsp;@</th>
-          <th>Length</th>
-          <th>OOB</th>
-        </tr>
-        <tr:t class='cut-info-cnt tab font-medium' repeat='cutInfo in info.cutInfo()'>
-          {{cutInfo.toString()}}
-        </tr:t>
-      </table>
-    </span>
+    <div:t $t-id='documents/cuts/cuts'>info.cutInfo().split</div:t>
     <span class='tab' id='{{viewContainer(info.views.left)}}'></span>
     <span class='tab' id='{{viewContainer(info.views.right)}}'></span>
   </div>
