--- a/services/cabinet/public/html/templates/model-controller.html
+++ b/services/cabinet/public/html/templates/model-controller.html
@@ -9,12 +9,12 @@
     <div class='model-container'>
       <div:t class='model-state {{group.level < 1 ? '' : 'model-label indent'}}'
               repeat='partCode, part in group.parts'
-              prefix='{{part.partCode(true)}}'>
+              prefix='{{part.locationCode()}}'>
         <label type='part-name' part-code='{{partCode}}'>
             {{partCode}}
         </label>
-        <input type='checkbox' class='part-code-checkbox' part-code='{{part.partCode(true)}}'
-                {{!tdm.hidePrefix(part.partCode(true)) ? 'checked' : ''}}>
+        <input type='checkbox' class='part-code-checkbox' part-code='{{part.locationCode()}}'
+                {{!tdm.hidePrefix(part.locationCode()) ? 'checked' : ''}}>
       </div:t>
     </div>
     <div:t repeat='label, group in group.groups' $t-id='model-controller'></div:t>
