--- a/services/cabinet/public/styles/estimate.css
+++ b/services/cabinet/public/styles/estimate.css
@@ -91,8 +91,8 @@ body {
   cursor: pointer;
 }
 
-input[name='malePartCode'],
-input[name='femalePartCode'],
+input[name='maleJointSelector'],
+input[name='femaleJointSelector'],
 input[name='partCode'],
 input[name='code'] {
   width: 75pt;
