angled cut documention implemented need validate and fix any bugs

--- a/services/cabinet/public/html/templates/documents/cuts/cut.html
+++ b/services/cabinet/public/html/templates/documents/cuts/cut.html
@@ -1,4 +1,5 @@
 <td>{{width ? display.measurement(width) : ''}}</td>
+<td>{{angle ? angle : ''}}</td>
 <td>{{upSide}}</td>
 <td>{{fenceEdge.label}}</td>
 <td>{{display.measurement(fenceDistance)}}</td>
