--- a/services/cabinet/public/html/templates/documents/cuts/table-saw.html
+++ b/services/cabinet/public/html/templates/documents/cuts/table-saw.html
@@ -3,6 +3,7 @@
     <caption><b>Table Saw</b></caption>
     <tr>
       <th>Width</th>
+      <th>Angle</th>
       <th>Side&nbsp;Up</th>
       <th>Edge</th>
       <th>Fence&nbsp;@</th>
