--- a/services/cabinet/public/html/templates/documents/cuts/unknown.html
+++ b/services/cabinet/public/html/templates/documents/cuts/unknown.html
@@ -1,4 +1,4 @@
-<div>
+<div{{unknown ? '' : ' hidden'}}>
   <h3>Cut information Cannot Be Determined for joints:</h3>
   <div:t class='cut-info-cnt tab font-medium' repeat='cutInfo in unknown'>
     {{cutInfo.toString()}}
