--- a/services/cabinet/public/html/templates/cabinet/head.html
+++ b/services/cabinet/public/html/templates/cabinet/head.html
@@ -1,5 +1,5 @@
 <div class='cabinet-header' cabinet-id='{{cabinet.id()}}'>
-  {{$index}})
+  {{$index + 1}})
   <input class='cabinet-id-input' name='name' prop-update='{{$index}}.name'
         index='{{$index}}' display-id='{{displayId}}' value='{{cabinet.name()}}'>
   &nbsp;&nbsp;&nbsp;&nbsp;
