--- a/services/cabinet/public/html/templates/index.html
+++ b/services/cabinet/public/html/templates/index.html
@@ -20,7 +20,7 @@
   <body>
     <button id='menu-btn'>&#8801;</button>
     <div id='menu' hidden></div>
-    <div id='login'><div id='login-cnt' class='center-all'></div></div>
+    <div id='login' hidden><div id='login-cnt' class='center-all'></div></div>
     <div id='display-ctn'>
       <div id='app' name='Orders' {{pageId !== 'home' ? "link='/cabinet/home'" : ''}} hidden>
         <div id='order-cnt'></div>
