--- a/services/cabinet/public/html/templates/managers/template/body.html
+++ b/services/cabinet/public/html/templates/managers/template/body.html
@@ -56,8 +56,8 @@
     <div class='expand-header'>View Shape</div>
     <div hidden>
       <div template-id='{{template.id()}}' class='layout-shape-display'>
-        <canvas class="top-sketch" width="200" height="200"></canvas>
-        <canvas class="front-sketch" width="200" height="200"></canvas>
+        <canvas class="top-sketch upside-down mirror-x" width="200" height="200"></canvas>
+        <canvas class="front-sketch upside-down mirror-x" width="200" height="200"></canvas>
       </div>
     </div>
   </div>
