--- a/services/cabinet/public/html/templates/managers/template/subassemblies/object/void.html
+++ b/services/cabinet/public/html/templates/managers/template/subassemblies/object/void.html
@@ -1,7 +1,7 @@
 <div>
   <label>Joint Set:</label>
-  <select class='template-input set-selector' name='jointSet'>
-    <option:t repeat='i in 0..6' {{jointSet === i ? 'selected' : ''}}>{{i}}</option:t>
+  <select class='template-input set-selector' name='jointSetIndex'>
+    <option:t repeat='i in 0..6' {{jointSetIndex === i ? 'selected' : ''}}>{{i}}</option:t>
   </select>
   <br>
   <div>
