WebWorker csg creation integrated into the application

--- a/services/cabinet/public/html/templates/three-view.html
+++ b/services/cabinet/public/html/templates/three-view.html
@@ -27,7 +27,7 @@
         <span class='three-view-canvas-cnt'>
           <b>Three View Drawing</b>
           <button class='three-view-draw-string-btn'>Copy Draw String</button>
-          <canvas class='upside-down' id="three-view" width="{{maxDem()}}" height="{{maxDem()}}"></canvas>
+          <canvas id="three-view" width="{{maxDem()}}" height="{{maxDem()}}"></canvas>
         </span>
       </div>
       <div class='part-info-cnt'>P INF CNT</div>
