--- a/services/cabinet/public/html/templates/documents/cuts/unknown.html
+++ b/services/cabinet/public/html/templates/documents/cuts/unknown.html
@@ -1,6 +1,6 @@
-<div{{unknown ? '' : ' hidden'}}>
+<div class='unknown-cnt'>
   <h3>Cut information Cannot Be Determined for joints:</h3>
-  <div:t class='cut-info-cnt tab font-medium' repeat='cutInfo in unknown'>
-    {{cutInfo.toString()}}
+  <div:t class='cut-info-cnt tab font-medium' repeat='item in list'>
+    {{item.descriptor}}
   </div:t>
 </div>
