--- a/services/cabinet/public/html/templates/documents/task-completion.html
+++ b/services/cabinet/public/html/templates/documents/task-completion.html
@@ -1,4 +1,4 @@
-<div:t repeat='task in tasks'>
+<div:t repeat='task in tasks' {{task.progress() === 100 ? 'hidden' : ''}}>
   {{task.process()}})
   {{task.status()}}
   {{task.progress()}}%
