--- a/services/cabinet/public/html/templates/documents/construction/part.html
+++ b/services/cabinet/public/html/templates/documents/construction/part.html
@@ -3,11 +3,11 @@
     <h2 class='part-header'>
       {{parts.length}}) {{disp.demensions(info.demensions)}}
       &nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;
-      {{disp.partIds(parts)}}
+      {{disp.partIds(parts)}} {{parts[0].locationCode()}}
     </h2>
   </div>
   <div class='font-medium part-cnt'>
-    <div>{{toolingHtml(info.toolingInfo)}}</div>
+    <div>{{toolingHtml(info)}}</div>
     <span class='tab' id='{{viewContainer(views.left)}}'></span>
     <span class='tab' id='{{viewContainer(views.right)}}'></span>
   </div>
