--- a/services/cabinet/public/html/templates/advanced/cabinet/divider.html
+++ b/services/cabinet/public/html/templates/advanced/cabinet/divider.html
@@ -1,9 +1,12 @@
 <div lookup-id='{{divider.id()}}'>
+  <label>Type</label>
+  {{DividerTypeSelector(divider).html()}}
+  <br>
   <label>Panel Thickness</label>
-  <input type="text" name="panelThickness" value="{{Measurement.display(divider.panelThickness())}}"
-      class='measurement-input'>
+  <input type="text" name="panelThickness" value="{{divider.panelThickness(undefined, true)}}">
+  <input disabled class='dem' type="text" name="panelThickness" value="{{Measurement.display(divider.panelThickness())}}">
   <br>
   <label>Divider Width</label>
-  <input type="text" name="maxWidth" value="{{Measurement.display(divider.maxWidth())}}"
-      class='measurement-input'>
+  <input type="text" name="maxWidth" value="{{divider.dividerWidth(undefined, true)}}">
+  <input disabled class='dem' type="text" name="maxWidth" value="{{Measurement.display(divider.dividerWidth())}}">
 </div>
