basement-wall project is good enough to build, going to try to add shelf functionality

--- a/services/cabinet/public/html/templates/advanced/cabinet/divider.html
+++ b/services/cabinet/public/html/templates/advanced/cabinet/divider.html
@@ -6,7 +6,7 @@
   <input type="text" name="panelThickness" value="{{divider.panelThickness(undefined, true)}}">
   <input disabled class='dem' type="text" name="panelThickness" value="{{Measurement.display(divider.panelThickness())}}">
   <br>
-  <label>Divider Width</label>
-  <input type="text" name="maxWidth" value="{{divider.dividerWidth(undefined, true)}}">
-  <input disabled class='dem' type="text" name="maxWidth" value="{{Measurement.display(divider.dividerWidth())}}">
+  <label>Frame Width</label>
+  <input type="text" name="maxWidth" value="{{divider.frameWidth()}}">
+  <input disabled class='dem' type="text" name="maxWidth" value="{{Measurement.display(divider.maxWidth())}}">
 </div>
