--- a/services/cabinet/public/html/templates/documents/construction/everything.html
+++ b/services/cabinet/public/html/templates/documents/construction/everything.html
@@ -1,6 +1,6 @@
 <div class='everything-cnt' id='everything-cnt-{{id}}'>
   <div:t class='avoid-page-break' repeat='section in sections'>
-    <h2>{{section.toSentance()}}</h2>
+    <h2 class='no-print'>{{section.toSentance()}}</h2>
     <div class='everything-{{section.toKebab()}}-cnt'>
       <h3>Coming Soon...</h3>
     </div>
